# nodriver-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/plans/: 2026-01-19-nodriver-mcp-design.md
src/nodriver_mcp/: __init__.py  __main__.py  server.py  session_manager.py  tools.py
src/nodriver_mcp/container/: __init__.py  server.py
tests/: test_baidu.py
