[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodriver-mcp"
version = "0.1.0"
description = "Docker-based nodriver MCP for browser automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "docker>=7.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nodriver-mcp = "nodriver_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nodriver_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
